# plotternova

./: .gitignore  README.md  pyproject.toml
examples/: basic_test.py  basic_usage.py  hist_test.py
src/plotternova/: core.py  plot_objects.py  plot_objects_old.py  utils.py
src/plotternova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/plotternova/plot_classes/: basic.py  hist.py
src/plotternova/plot_objects/: special2d.py  standard2d.py
src/plotternova/theme/: color_theme.py  style.py
